kubernetes/apps/artifactory/artifactory/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/httproute_v1beta1.json
{
  apiVersion: "gateway.networking.k8s.io/v1",
  kind: "HTTPRoute",
  metadata: {
    name: "artifactory",
  },
  spec: {
    hostnames: [
      "packages.darkfellanetwork.com",
    ],
    parentRefs: [{
      name: "artifactory",
      namespace: "envoy-gateway-system",
      sectionName: "https",
    }],
    rules: [{
      matches: [{
        path: {
          type: "PathPrefix",
          value: "/",
        },
      }],
      backendRefs: [{
        group: "gateway.envoyproxy.io",
        kind: "Backend",
        name: "artifactory-backend",
      }],
    }],
  },
}
